--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 										<p><span class="image left"><img src="Imgs/your-shot.jpg" style="width:100px" /></span> I have been doing travel photography since 2014. I am part of the Your Shot National Geographic community where I contributed to various assignments posted by various curators and recieved quality feedback. I am experienced with Adobe Photoshop and Lightroom.</p>
 										<br/><hr>
 										<h3>Market Research with Baxi</h3>
-										<p><span class="image left"><img src="Imgs/baxitaxi04.png" style="width:100px" /></span>I conducted primary data collection by communicating with various high-profile clients and potential customers. By analyzing and evaluating the acquired data, I was able to provide valuable written and verbal feedback for an emerging firm. The written report utilising various business tools like the SWOT analysis, Force-Feild Analysis, Marketing Mix and Ansoff matrix to test the hypothesis.</p>
+										<p><span class="image left"><img src="Imgs/baxitaxi04.png" style="width:100px" /></span>I conducted primary data collection by communicating with various high-profile clients and potential customers. By analyzing and evaluating the acquired data, I was able to provide valuable written and verbal feedback for an emerging firm. The written report utilizes various business tools like the SWOT analysis, Force-Feild Analysis, Marketing Mix and Ansoff matrix to test the hypothesis.</p>
 								
 								</section>
 						</div>
