--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											<span class="icon fa-rocket"></span>
 											<div class="content">
 												<h3>Working Evironments</h3>
-												<p> Experience with Linux distributions like Fedora and Ubuntu, run on either a VMware or Oracle Virtual Box Platform.<br>I have utilised both MacOS and Windows. Familiar with using Git and Github.</p>
+												<p> Experience with Linux distributions like XUbuntu and Ubuntu, run on either a VMware or Oracle Virtual Box Platform.<br>I have utilised both MacOS and Windows. Familiar with using Git and Github.</p>
 											</div>
 										</article>
 										<article>
