Minor Additions to content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 										<header>
 											<h1>Hi, I’m Shubham Sharan</h1>
 										</header>
-										<p>I am currently pursuing a Bachelors in Computer Science Honours, along with a minor in Statistics. My passion lies in programming, photography, statistics, and graphic design. I enjoy hiking, cycling, and snowboarding. </p>
+										<p>I am currently pursuing a Bachelors in Computer Science Honours, along with a minor in Statistics. My passion lies in programming, photography, statistics, and graphic design. I enjoy hiking, cycling, and snowboarding.  </p>
 									</div>
 									<span class="image object">
 										<img class="content animated slideInRight" style="width: 400px"src="images/xpro.jpg" alt="" />
@@ -40,14 +40,14 @@
 											<span class="icon fa-tv"></span>
 											<div class="content">
 												<h3>Front-end Development</h3>
-												<p> Experience with creating well designed web applications and sites from scratch and utilising a template, implemented in HTML, CSS, Javascript and NodeJS. Exposed to DOM manipulation and RESTFUL API's. Along with data storage and manipulation done with MongoDB and SQLite.</p>
+												<p> Experience with creating well designed web applications and sites from scratch and utilising a template, implemented in HTML, CSS, Javascript and NodeJS. Exposed to DOM manipulation and RESTFUL API's. Along with data storage and manipulation done with MongoDB and SQLite. </p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-gears"></span>
 											<div class="content">
 												<h3>Back-end Development</h3>
-												<p> Constructed various data management systems, games, and analytical tools implemented in Java, Python and C++, whilst handling data with SQL databases, JSON, Excel Sheets and simulated cloud servers, for academic, personal and business-related problems.</p>
+												<p> Constructed various data management systems, games, and analytical tools implemented in Java, Python and C++, whilst handling data with SQL databases, JSON, Excel Sheets and simulated cloud servers, for academic, personal and business-related problems. I am currently undertaking academic courses to have a better understanding of data structures as well as learning C.</p>
 											</div>
 										</article>
 										<article>
@@ -61,7 +61,7 @@
 											<span class="icon fa-signal"></span>
 											<div class="content">
 												<h3>Data Analysis</h3>
-												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. </p>
+												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. I am currently learning Matlab focusing on Graphing various functions. </p>
 											</div>
 										</article>
 									</div>
