--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<span class="icon fa-signal"></span>
 											<div class="content">
 												<h3>Data Analysis</h3>
-												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. I am currently learning Matlab focusing on Graphing various functions. </p>
+												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. I am currently learning Matlab focusing on data manipulation and visualizations. </p>
 											</div>
 										</article>
 									</div>
