--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 											<span class="icon fa-tv"></span>
 											<div class="content">
 												<h3>Front-end Development</h3>
-												<p> Experience with creating well designed web applications and sites from scratch and utilising a template, implemented in HTML, CSS, Javascript and NodeJS. Exposed to DOM manipulation and RESTFUL API's. Along with data storage and manipulation done with MongoDB and SQLite. </p>
+												<p> Experience with creating well designed web applications implemented in HTML, CSS, Javascript and NodeJS. Exposed to DOM manipulation, ExpressJS, MongoDB and RESTFUL API's. Have worked with various UI/UX Designers to make functional webpage, often using Bootstrap Frameworks. </p>
 											</div>
 										</article>
 										<article>
