--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="icon" href="images/favicon.png">
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-
 	</head>
 	<body class="is-preload">
 
@@ -73,6 +72,30 @@
 										<h2>Portfolio</h2>
 									</header>
 									<div class="posts">
+											<article>
+											<a class="image" href="https://mysuperduperpaperscraper.com/"><img src="PortImgs/paperscraper.png" style="width:400px; height: 220px;" alt="" /></a>
+											<h3>CuHacking 2019: Paper Scraper</h3>
+											<p> Transforming the way we use textbooks with data driven visualization, I had the oppurtunity to design a basic HTML,CSS and Javascript front-end hosted by a NodeJS server utilising the ExpressJS framework. Learning the basic fundamentals of AngualarJS to create more dynamic web applications was a great experience. I focused on creating an amazing interactive data visualization in the form of a word cloud tool which enabled people to focus on the keywords most commonly used in the textbook, which led me design and implement a powerful module to remove all stopwords, excessive long titles and other unnecessary things that interefered with the visuals, using Javascript. It enables users to also write custom keywords to see if a book is feasible for certain kind of study, allowing to create custom word clouds.</p>
+											<h4>Implemented with:</h4>
+											<i class="devicon-html5-plain-wordmark colored" style="font-size: 3rem"></i>
+											<i class="devicon-css3-plain-wordmark colored" style="font-size: 3rem"></i>
+											<i class="devicon-javascript-plain colored" style="font-size: 3rem"></i>
+											<i class="devicon-angularjs-plain colored" style="font-size: 3rem"></i>
+											<i class="devicon-express-original colored" style="font-size: 3rem"></i>
+											<i class="devicon-nodejs-plain colored" style="font-size: 3rem"></i>
+											</ul>
+										</article>
+										<article>
+											<a class="image" href="https://devpost.com/software/slangslack"><img src="PortImgs/slang.jpeg" style="width:400px; height: 220px;" alt="" /></a>
+											<h3>UOttaHack 2: SlangSlack</h3>
+											<p>Our team of 2 won the Best Collaboration project between a UOttawa and Carleton student was an amazing feeling. We created web application which allowed you to choose over 55,000 songs. From which we took the lyrics of the song, found all the slang in it and then looked it up on Urban Dictionary using an API to find the meaning, using the best keyword to identify it, we simply replaced the slang with the keyword and allowed the application to sing the song to you. We utilised HTML, CSS and Javascript in the front end, and used Python's NLP libraries for doing the processing, whilst using a Flask server to host our application. We also incorporated Sentiment Analysis which was being done by the Google Cloud Natural Language API. </p>
+											<h4>Implemented with:</h4>
+											<i class="devicon-html5-plain-wordmark colored" style="font-size: 3rem"></i>
+											<i class="devicon-css3-plain-wordmark colored" style="font-size: 3rem"></i>
+											<i class="devicon-javascript-plain colored" style="font-size: 3rem"></i>
+											<i class="devicon-python-plain colored" style="font-size: 3rem"></i>
+											</ul>
+										</article>
 										<article>
 											<a class="image"><img src="PortImgs/food2fork.png" style="width:400px; height: 220px;" alt="" /></a>
 											<h3>Food2Fork Recipe Application</h3>
@@ -224,8 +247,10 @@
 										<li class="fa-home">101 Champagne Avenue S, Envie, Ottawa, K1S4P3</li>
 									</ul>
 									<ul class="icons">
-											<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+											<li><a href="https://www.linkedin.com/in/shubham-sharan-a48145116/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://github.com/ShubhamSharan" class="icon fa-github"><span class="label">Github</span></a></li>
+											<li><a href="https://github.com/ShubhamSharan" class="icon fa-devpost"><span class="label">Devpost</span></a></li>
+
 									</ul>
 								</section>
 						</div>
