--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<article>
 											<a class="image" href="https://devpost.com/software/slangslack"><img src="PortImgs/slang.jpeg" style="width:400px; height: 220px;" alt="" /></a>
 											<h3>UOttaHack 2: SlangSlack</h3>
-											<p>Our team of 2 won the Best Collaboration project between a UOttawa and Carleton student was an amazing feeling. We created web application which allowed you to choose over 55,000 songs. From which we took the lyrics of the song, found all the slang in it and then looked it up on Urban Dictionary using an API to find the meaning, using the best keyword to identify it, we simply replaced the slang with the keyword and allowed the application to sing the song to you. We utilised HTML, CSS and Javascript in the front end, and used Python's NLP libraries for doing the processing, whilst using a Flask server to host our application. We also incorporated Sentiment Analysis which was being done by the Google Cloud Natural Language API. </p>
+											<p>Our team of 2, won the Best Collaborative project between a UOttawa and Carleton student, which was an amazing feeling. We created web application which allowed you to choose over 55,000 songs that were being read from a Kaggle Dataset. From which we took the lyrics of the song, found all the slang in it and then looked it up on Urban Dictionary using an API to find the meaning, using the best keyword to identify it, we simply replaced the slang with the keyword and allowed the application to sing the song to you. We utilised HTML, CSS and Javascript in the front end, and used Python's NLP libraries for doing the processing, whilst using a Flask server to host our application. We also incorporated Sentiment Analysis which was being done by the Google Cloud Natural Language API. </p>
 											<h4>Implemented with:</h4>
 											<i class="devicon-html5-plain-wordmark colored" style="font-size: 3rem"></i>
 											<i class="devicon-css3-plain-wordmark colored" style="font-size: 3rem"></i>
@@ -109,7 +109,7 @@
 											</ul>
 										</article>
 										<article>
-											<a class="image"><img src="PortImgs/Infographic.png" style="width:400px; height: 220px;" alt="" /></a>
+											<a class="image" href="https://shubhamsharan.github.io/InfoGraphicProjectV/"><img src="PortImgs/Infographic.png" style="width:400px; height: 220px;" alt="" /></a>
 											<h3>City Of Ottawa: Infographic</h3>
 											<p>Examining multiple datasets from the Ottawa open data portals to create various visualizations represented in a web-based infographic, to communicate a message to the masses. Utilizing HTML, CSS, and Javascript, to formulate the front-end and utilizing GitHub Pages to host the infographic</p>
 											<h4>Implemented with:</h4>
