GCP Crash Link change

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									</header>
 									<div class="posts">
 											<article>
-											<a class="image" href="https://mysuperduperpaperscraper.com/"><img src="PortImgs/paperscraper.png" style="width:400px; height: 220px;" alt="" /></a>
+											<a class="image" href="https://devpost.com/software/smash-books"><img src="PortImgs/paperscraper.png" style="width:400px; height: 220px;" alt="" /></a>
 											<h3>CuHacking 2019: Paper Scraper</h3>
 											<p> Transforming the way we use textbooks with data driven visualization, I had the oppurtunity to design a basic HTML,CSS and Javascript front-end hosted by a NodeJS server utilising the ExpressJS framework. Learning the basic fundamentals of AngualarJS to create more dynamic web applications was a great experience. I focused on creating an amazing interactive data visualization in the form of a word cloud tool which enabled people to focus on the keywords most commonly used in the textbook, which led me design and implement a powerful module to remove all stopwords, excessive long titles and other unnecessary things that interefered with the visuals, using Javascript. It enables users to also write custom keywords to see if a book is feasible for certain kind of study, allowing to create custom word clouds.</p>
 											<h4>Implemented with:</h4>
