Work Experience Added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 										<header>
 											<h1>Hi, I’m Shubham Sharan</h1>
 										</header>
-										<p>I am currently pursuing a Bachelors in Computer Science Honours, along with a minor in Statistics. My passion lies in programming, photography, statistics, and graphic design. I enjoy hiking, cycling, and snowboarding.  </p>
+										<p>I am currently pursuing a Bachelors in Computer Science Honours, along with a minor in Statistics. I am currently working at BGIS as a Financial Analytics Intern for the summer. My passion lies in programming, photography, statistics, and graphic design. I enjoy hiking, cycling, and snowboarding.  </p>
 									</div>
 									<span class="image object">
 										<img class="content animated slideInRight" style="width: 400px"src="images/xpro.jpg" alt="" />
@@ -60,12 +60,19 @@
 											<span class="icon fa-signal"></span>
 											<div class="content">
 												<h3>Data Analysis</h3>
-												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. I am currently learning Matlab focusing on data manipulation and visualizations. </p>
+												<p>Experience with SAS, Minitab and Excel for statistical testing and mathematical manipulation. Furthermore, familiar with graphing libraries incorporating Plotly.Js, Mapbox and Matplotlib, to represent the data in hand. I am currently working with Knime to clean and transform data for easier reporting and analysis. </p>
 											</div>
 										</article>
 									</div>
 								</section>
-
+								<section id="workexperience">
+									<header class="major">
+										<h2>Work Experience</h2>
+									</header>
+									<h3>Financial Analytics Intern at Brookfield Global Integrated Solutions</h3>
+									<h5><i>May 1, 2019 - August 31, 2019</i></h5>
+									<p><span class="image left"><img src="Imgs/bgis.png" style="width:100px" /></span> Currently, I am building Knime workflows to clean and transform data for efficient reporting. Furthermore, working with the Pyviz packages to visualize large datasets and with the intent of integrating it with the Knime platform or creating custom web based dashboards. I have also had the oppurtunity to assist in presenting some of the projects I had been worked on alongside my mentor to clients and higher staff.</p>
+								</section>
 							<!-- Section -->
 								<section id="Portfolio">
 									<header class="major">
